feat(home): added home page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="navbar-menu">
         <a href="#courses">Courses</a>
         <a href="#about">About Us</a>
-        <a href="#career">Career & Placement Support</a>
+        <a href="#career">Career Support</a>
         <a href="#contact">Contact</a>
         <a href="#gallery">Gallery</a>
       </div>
@@ -65,10 +65,10 @@
     </div>
   </section>
 
-  <!-- Career & Placement Support Section -->
+  <!-- Career Support Section -->
   <section id="career">
     <div class="career-content">
-      <!-- <img src="images/career-image.png" alt="Career & Placement Support Image"> -->
+      <!-- <img src="images/career-image.png" alt="Career Support Image"> -->
       <div class="career-content-text">
         <h2>Career Support</h2>
         <p>Our career support services ensure you are well-prepared for job interviews. We provide
