feat(website): website improvement - navbar, contactForm

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+  <title>Learn2Impact Academy - Software Training and Career service</title>
   <!-- Meta Tags for SEO -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Learn2Impact Academy - Providing software training and career services to fresh technical graduates.">
-  <meta name="keywords" content="software training, career, placement service, technical graduates, courses, Learn2Impact Academy">
+  <meta name="keywords"
+    content="software training, career, placement service, technical graduates, courses, Learn2Impact Academy">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Learn2Impact Academy">
   <meta property="og:description"
@@ -15,15 +17,28 @@
   <meta property="og:image" content="https://www.learn2impact.com/images/logo.png">
   <meta property="og:url" content="https://www.learn2impact.com">
 
+  <!-- Website Analytics -->
+  <!-- Google Tag Manager -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GNBXL5S5LF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GNBXL5S5LF');
+  </script>
+  <!-- End Google Tag Manager -->
+
   <!-- Other necessary meta tags -->
-  <title>Learn2Impact Academy - Software Training and Career service</title>
   <link rel="canonical" href="www.learn2impact.com">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -33,12 +48,21 @@
 </head>
 
 <body>
+  <!-- Website Analytics -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZXXZFQ" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <!-- Header -->
   <header>
+
     <nav class="navbar">
-      <a href="#" class="logo">
-        <img src="images/l2i.png" alt="Logo">
-      </a>
+      <div>
+        <a href="#" class="logo">
+          <img src="images/l2i.png" alt="Logo">
+        </a>
+      </div>
       <div class="navbar-menu">
         <a href="#courses">Courses</a>
         <a href="#about">About Us</a>
@@ -47,6 +71,7 @@
         <a href="#gallery">Gallery</a>
       </div>
     </nav>
+
   </header>
 
   <!-- Hero Section -->
@@ -99,7 +124,7 @@
         </p>
       </div>
     </div>
-  </section>  
+  </section>
 
   <!-- Career Support Section -->
   <section id="career">
@@ -126,7 +151,7 @@
         <li><a href="https://www.facebook.com/profile.php?id=100093609093749" class="custom-icon-link-fb"><i
               class="fa fa-facebook facebook-icon icon-pad"></i>Facebook: Learn2Impact</a></li>
       </ul>
-      
+
       <span id="contact-succ">Thanks for contacting us.</span>
       <form id="contactForm" action="https://formspree.io/f/mlekqora" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
@@ -134,9 +159,9 @@
         <textarea name="message" placeholder="Your Message" required></textarea>
         <button type="submit">Submit</button>
       </form>
-      
+
     </div>
-  </section>   
+  </section>
 
   <!-- Gallery Section -->
   <section id="gallery">
