website: improvements and included interview demo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
   <!-- Header -->
   <header>
-
     <nav class="navbar">
       <div>
         <a href="#" class="logo">
@@ -67,22 +66,27 @@
         <a href="#courses">Courses</a>
         <a href="#about">About Us</a>
         <a href="#career">Career Support</a>
-        <a href="#l2i_contact">Contact</a>
+        <a class="contact" href="#l2i_contact">Contact</a>
         <a href="#gallery">Gallery</a>
       </div>
     </nav>
-
   </header>
 
   <!-- Hero Section -->
   <section id="home" class="hero-section">
     <div class="hero-content">
-      <h2>Learn2Impact Academy</h2>
-      <p>Passionate about providing software training and career services to make a big impact in the industry.</p>
-      <a href="#courses" class="cta-btn">Explore Courses</a>
+      <div class="hero-text">
+        <h2>Learn with us and make an impact</h2>
+        <p>Passionate about providing software training and career services to make a big impact in the industry.</p>
+        <a href="#courses" class="cta-btn">Explore Courses</a>
+        <a href="https://www.youtube.com/watch?v=bHkMAA2lwDo" class="video-btn" target="_blank">Watch Video</a>
+      </div>
+    </div>
+    <div class="hero-image">
+      <img src="images/interview_talk.png" alt="Video Screenshot">
     </div>
   </section>
-
+  
   <!-- Courses Section -->
   <section id="courses">
     <h2>Our Courses</h2>
