--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
       <div class="hero-text">
         <h2>Learn with us and make an impact</h2>
         <p>Passionate about providing software training and career services to make a big impact in the industry.</p>
+        <p>Introducing our free AI-powered mock interview tool. Enhance your interview skills anytime, anywhere, without relying on others.</p>
         <a href="#courses" class="cta-btn">Explore Courses</a>
-        <a href="https://www.youtube.com/watch?v=bHkMAA2lwDo" class="video-btn" target="_blank">Watch Video</a>
+        <a href="https://www.youtube.com/watch?v=bHkMAA2lwDo" class="video-btn" target="_blank">See Demo</a>
       </div>
     </div>
     <div class="hero-image">
